--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "webcode/phpbb-bridge",
+    "name": "TomKita/PhpBBBridge",
     "description": "A bridge between phpBB3 and laravel 4",
     "keywords": ["phpbb", "phpbb3", "bridge", "laravel"],
     "license": "MIT",
